version03/deployment-mongoapp-greeny.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-mongoapp-deployment-green
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-mongoapp
  template:
    metadata:
      labels:
        app: node-mongoapp
    spec:
      containers:
      - name: node-mongoapp
        image: xaprun/aj-node-redisapp:1.0-green # Replace with your Docker Hub image or ACR image
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
