version03/deployment-mongoapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-mongoapp-deployment
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-mongoapp
  template:
    metadata:
      labels:
        app: node-mongoapp
    spec:
      containers:
      - name: node-mongoapp
        image: xaprun/aj-node-mongoapp:1.1-purple # Replace with your Docker Hub image or ACR image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: node-mongoapp-svc
spec:
  selector:
    app: node-mongoapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
