version03/deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: dev
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-mongoapp-svc
            namespace: dev
            port:
              number: 80
      - path: /env
        pathType: Prefix
        backend:
          service:
            name: node-mongoapp-svc
            namespace: dev
            port:
              number: 80
         # Dodaj rewrite-target dla ścieżki /env
        # annotations:
         # nginx.ingress.kubernetes.io/rewrite-target: /env
